[package]
name = "cpi-swap-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cpi_swap_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.31.1", default-features = true, features = [
  "init-if-needed",
  "event-cpi",
] }
anchor-spl = { version = "0.31.1", default-features = true }

[dev-dependencies]
jup-ag-sdk = "1.0.6"
tokio = { version = "1.46.1", features = ["full"] }
base64 = "0.22.1"
solana-sdk = "2.3.1"
solana-client = "2.2.7"
dotenv = "0.15.0"
